<resources>
    <string name="app_name">Ejercicio03-Citas Tattoo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="error">Todos los campos son Obligatorios</string>

    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="fecha_nacimiento">Fecha Nacimiento (dd/mm/aaaa)</string>
    <string name="fecha_cita">Fecha Cita (dd/mm/aaaa)</string>
    <string name="color" translatable="false">Color</string>
    <string name="menor_autorizado">Menor Autorizado</string>
    <string name="adelanto">Adelanto</string>
    <string name="color_bn" translatable="false">Color/BN</string>
    <string name="error_fechas">Fechas Incorrectas</string>
</resources>