<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewCitaActivity">

    <EditText
        android:id="@+id/txtNombreCita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtApellidosCita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/apellidos"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtFechaNacimientoCita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/fecha_nacimiento"
        android:inputType="date" />

    <Switch
        android:id="@+id/swAutorizadoCita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/menor_autorizado"
        android:textAlignment="textEnd" />

    <EditText
        android:id="@+id/txtFechaCitaCita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/fecha_cita"
        android:inputType="date" />

    <EditText
        android:id="@+id/txtAdelantoCita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/adelanto"
        android:inputType="numberDecimal" />

    <Switch
        android:id="@+id/swColorCita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/color_bn"
        android:textAlignment="textEnd"
        android:textOff="Tattoo en Negro"
        android:textOn="Tattoo a Color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEliminarCita"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:text="Eliminar" />

        <Button
            android:id="@+id/btnGuardarCita"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:text="guardar" />
    </LinearLayout>

</LinearLayout>